Update to Spark 4
Bump version to 11.0.0 as its a major change
Updates to Spark 4 support
Removes Scala 2.12 support (not supported in Spark 4)
Updates gradlew to 9.0.0
Updates to Evergreen this version only supports Spark 4 and Scala 2.13

JAVA-450